grammar.js
    module: $ => seq(
      repeat($._newline),
      repeat($._line_start),
      repeat($._newline),
    ),

    _line_start: $ => seq(
      choice(
        $._inline_expressions,
        $._block_expression,
      ),
    ),

    _expression: $ => choice(
      $._term_ext,
      $._assignment,
      $.call,
      $.yield,
      $.import,
      $.export,
      $.debug,
    ),

    _term_ext: $ => choice(
      $._term,
      $.range,
      $.range_inclusive,
      $.binary_op,
      $.comparison_op,
      $.boolean_op,
      $.function,
      $.chain,
      $.not,
    ),

    _term: $ => choice(
      $._constants,
      $.number,
      $.string,
      $.identifier,
      $.meta,
      $.parenthesized,
      $.tuple,
      $.list,
      $.map,
      $.negate,
    ),

    _expressions: $ => choice(
      $._expression,
      $.comma_separated,
    ),

    _line_or_block: $ => choice(
      $._inline_expressions,
      $.block,
      // Allow the expression to be left incomplete
      $._newline,
    ),

    assign: $ => prec.right(PREC.assign, seq(
      field('lhs', choice(
        $._assign_target,
        $.unpacked_map,
      )),
      $._assign_rhs,
    )),

    _assign_rhs: $ => prec.right(PREC.assign, seq(
      '=',
      field('rhs', choice(
        seq(
          $._indent,
          choice(
            $._expression,
            $.assign_expressions,
          ),
          $._dedent,
        ),
        choice(
          $._expression,
          $.assign_expressions,
          $.map_block,
        ),
      ))
    )),

    _assign_target: $ => choice(
      $.identifier,
      $.meta,
      $.chain,
    ),

    let_assign: $ => choice(
      seq(
        'let',
        $.variable,
        repeat(seq(
          token.immediate(','),
          $.variable,
        )),
        $._assign_rhs,
      ),
    ),

    variable: $ => seq(
      $.identifier,
      optional(seq(
        ':',
        $.type,
      )),
    ),

    type: $ => prec.right(seq(
      $.identifier,
      optional('?'),
    )),

    binary_op: $ => choice(
      binary_op($, choice('-', '+'), $._operator_continuation_add, prec.left, PREC.add),
      binary_op($, choice('*', '/', '%'), $._operator_continuation_multiply, prec.left, PREC.multiply),
      binary_op($, '^', $._operator_continuation_power, prec.right, PREC.power),
    ),

    range: $ => prec.left(PREC.range, seq(
      $._term_ext, '..', $._term_ext
    )),

    range_inclusive: $ => prec.left(PREC.range, seq(
      $._term_ext, '..=', $._term_ext
    )),

    false: _ => 'false',
    null: _ => 'null',
    self: _ => 'self',
    true: _ => 'true',

    identifier: _ => id,
    meta_id: _ => meta_id,
    test: _ => '@test',

    meta: $ => choice(
      seq(
        $.test,
        field('name', $.identifier),
      ),
      prec.right(seq(
        field('id', $.meta_id),
        optional(field('name', $.identifier)),
      )),
      '@[]',
      '@||',
      '@+',
      '@-',
      '@*',
      '@/',
      '@%',
      '@^',
      '@+=',
      '@-=',
      '@*=',
      '@/=',
      '@%=',
      '@^=',
      '@==',
      '@!=',
      '@>',
      '@>=',
      '@<',
      '@<=',
    ),

    negate: $ => prec(PREC.negate, seq('-', choice($._term, $.chain))),

    export: $ => prec.right(seq(
      'export',
      choice(
        $._expressions,
        $.map_block,
      ),
    )),

    number: _ => token(
      choice(
        // Ints
        /\d[\d_]*(e[+-]?\d[\d_]*)?/,
        // Floats
        /[\d_]*\.\d[\d_]*(e[+-]?\d[\d_]*)?/,
        // Binary
        /0b[01][01_]*/,
        // Octal
        /0o[0-7][0-7_]*/,
        // Hex
        /0x[0-9a-fA-F][0-9a-fA-F_]*/,
      ),
    ),

    parenthesized: $ => prec(PREC.parenthesized, seq('(', $._expression, ')')),

    tuple: $ => prec(PREC.parenthesized, seq(
      '(',
      optional($._newline),
      optional(choice(
        // Just a comma
        $._flexi_comma,
        // At least one element, with at least one comma, e.g. `(x,)`, `(x, y)`
        seq(
          $.element,
          $._flexi_comma,
          optional(seq(
            $.element,
            repeat(
              seq(
                $._flexi_comma,
                $.element,
              )
            ),
            optional($._flexi_comma),
          )),
        ),
      )),
      optional($._newline),
      ')',
    )),

    list: $ => prec(PREC.parenthesized, seq(
      '[',
      optional($._newline),
      optional(choice(
        // just a comma
        $._flexi_comma,
        // At least one element, with optional trailing comma
        seq(
          $.element,
          repeat(
            seq(
              $._flexi_comma,
              $.element,
            )
          ),
          optional($._flexi_comma),
        ),
      )),
      optional($._newline),
      ']',
    )),

    _flexi_comma: $ => seq(
      repeat($._newline),
      token.immediate(','),
      repeat($._newline),
    ),

    element: $ => $._term_ext,

    map: $ => seq(
      '{',
      optional($._newline),
      optional(seq(
        $.entry_inline,
        repeat(seq(
          $._flexi_comma,
          $.entry_inline,
        )),
        optional($._flexi_comma),
      )),
      optional($._newline),
      '}'
    ),

    entry_inline: $ => seq(
      field('key', $._map_key),
      optional(seq(
        ':',
        field('value', $._expression),
      )),
    ),

    map_block: $ => seq(
      $._indent,
      repeat1($.entry_block),
      $._dedent,
    ),

    entry_block: $ => seq(
      field('key', $._map_key),
      ':',
      field('value', choice(
        alias($._map_block_tuple_value, $.comma_separated),
        $._line_or_block,
        $.call_indented,
        $.map_block,
      )),
    ),

    _map_key: $ => choice(
      $.identifier,
      $.meta,
      $.string,
    ),

    string: $ => choice(
      seq(
        alias($._string_start, $.string_quote),
        optional($.string_content),
        alias($._string_end, $.string_quote),
      ),
      seq(
        $._raw_string_start,
        optional($.raw_string_content),
        $._raw_string_end,
      ),
    ),

    string_content: $ => repeat1(
      choice(
        $.escape,
        $.interpolation,
        /./,
        /\s/
      )
    ),

    function: $ => seq(
      $.args,
      optional(seq(
        '->',
        $.type
      )),
      field('body', $._line_or_block),
    ),

    args: $ => seq(
      "|",
      optional(seq(
        $.arg,
        repeat(
          seq(',', $.arg),
        ),
        optional(','),
      )),
      // Use token.immediate to avoid confusing the closing | as the start of a new function
      token.immediate("|"),
    ),

    import: $ => prec.right(seq(
      optional(seq('from', $.import_module)),
      'import',
      choice(
        seq(
          $.import_item,
          repeat(seq(',', $.import_item)),
        ),
        '*',
      ))),

    import_module: $ => choice(
      seq(
        $.identifier,
        repeat(seq('.', $.identifier)),
      ),
      $.string,
    ),

    import_item: $ => seq(
      choice($.string, $.identifier),
      optional(seq('as', $.identifier)),
    ),

    _map_block_tuple_value: $ => prec(PREC.comma, seq(
      $._expression,
      ',',
      $._newline,
    )),
  }
});

function assign_op($, operator, precedence_fn) {
  return precedence_fn(PREC.assign, seq(
    $._assign_target,
    operator,
    $._expression
  ));
}

function binary_op($, operator, operator_continuation, precedence_fn, precedence) {
  const operator_token = operator_continuation == null
    ? operator
    : choice(operator, seq(operator_continuation, operator));

  return precedence_fn(precedence, seq(
    $._term_ext,
    choice(
      seq(
        operator_token,
        $._term_ext,
      ),
      seq(
        operator_token,
        $._indent,
        $._term_ext,
        $._dedent,
      )
    ),
  ));
}

function keyword_expression_single($, keyword) {
  return prec.right(seq(
    keyword,
    optional($._expression),
  ));
}

function keyword_expression_multi($, keyword, precedence) {
  return prec.right(precedence, seq(
    keyword,
    optional(
      choice(
        $._expressions,
        seq(
          $._indent,
          $._expressions,
          $._dedent,
        ),
        $.map_block,
      ))
  ));
}
