test/corpus/comments.txt
===========================================================================================
comments_inline
===========================================================================================

# comment
true # true
false

---

(module
  (comment)
  (true)
  (comment)
  (false))

===========================================================================================
comments_block
===========================================================================================

#-
true
null
foo
-#

---

(module
  (comment))

===========================================================================================
comments_arent_nested
===========================================================================================

#-

# foo
1 + 1
#- unterminated nested comment start

-#

false

---

(module
  (comment)
  (false))

===========================================================================================
comments_toggle_on
===========================================================================================

#--
assert false
#--#

---

(module
  (comment))

===========================================================================================
comments_toggle_off
===========================================================================================

#--#
false
#--#

---

(module
  (comment)
  (false)
  (comment))
