test/corpus/export.txt
===========================================================================================
export_assign
===========================================================================================

export foo = 99

---

(module
  (export
    (assign
      (identifier)
      (number))))

===========================================================================================
export_let
===========================================================================================

export let foo: Number = 99

---

(module
  (export
    (let_assign
      (variable
        (identifier)
        (type
          (identifier)))
      (number))))

===========================================================================================
export_map_inline
===========================================================================================

export { foo, bar }

---

(module
  (export
    (map
      (entry_inline
        key: (identifier))
      (entry_inline
        key: (identifier)))))

===========================================================================================
export_map_block
===========================================================================================

export
  foo: 42
  'bar': 99

export
  @pre_test: || true
  @test foo: || true

---

(module
  (export
    (map_block
      (entry_block
        key: (identifier)
        value: (number))
      (entry_block
        key: (string
          (string_quote)
          (string_content)
          (string_quote))
        value: (number))))
  (export
    (map_block
      (entry_block
        key: (meta
          id: (meta_id))
        value: (function
          (args)
          body: (true)))
      (entry_block
        key: (meta
          (test)
          name: (identifier))
        value: (function
          (args)
          body: (true))))))
