test/corpus/lists_and_tuples.txt
===========================================================================================
parenthesized
===========================================================================================

(1)
((x,))

---

(module
  (parenthesized
    (number))
  (parenthesized
    (tuple
      (element
        (identifier)))))

===========================================================================================
tuple_empty
===========================================================================================

()
(,)

---

(module
  (tuple)
  (tuple))

===========================================================================================
tuple_nested
===========================================================================================

(foo, bar, (baz,))

---

(module
  (tuple
    (element
      (identifier))
    (element
      (identifier))
    (element
      (tuple
        (element
          (identifier))))))

===========================================================================================
tuple_nested_multi_line
===========================================================================================

(
  foo,
  bar
, (baz)
)

---

(module
  (tuple
    (element
      (identifier))
    (element
      (identifier))
    (element
      (parenthesized
        (identifier)))))

===========================================================================================
list_multi_line
===========================================================================================

[
  foo,
  bar
, (baz)
]

---

(module
  (list
    (element
      (identifier))
    (element
      (identifier))
    (element
      (parenthesized
        (identifier)))))
