test/corpus/literals.txt
===========================================================================================
constants
===========================================================================================

true
false
null
self

---

(module
  (true)
  (false)
  (null)
  (self))

===========================================================================================
integers
===========================================================================================

0
123
-99
1_000_000

---

(module
  (number)
  (number)
  (negate
    (number))
  (number))

===========================================================================================
floats
===========================================================================================

0.0
1.0
1e99
123.0e-33
44e+9
-1.24
-2e99

---

(module
  (number)
  (number)
  (number)
  (number)
  (number)
  (negate
    (number))
  (negate
    (number)))

===========================================================================================
numbers_prefixed
===========================================================================================

0b10101
0o070605
0xfeed_face
-0b1111
-0o172
-0x7f

---

(module
  (number)
  (number)
  (number)
  (negate
    (number))
  (negate
    (number))
  (negate
    (number)))

===========================================================================================
ranges
===========================================================================================

1..2
1 + 1..2 + 3
1..=10
-1..1

---

(module
  (range
    (number)
    (number))
  (range
    (binary_op
      (number)
      (number))
    (binary_op
      (number)
      (number)))
  (range_inclusive
    (number)
    (number))
  (range
    (negate
      (number))
    (number)))
